gcc/testsuite/g++.dg/ext/attrib45.C
// PR c++/52906

__attribute__ ((__deprecated__)); // { dg-error "does not declare anything" }
